--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/jasonalmaturner/ecommerce-day-one",
   "dependencies": {
+    "bluebird": "^2.3.6",
+    "body-parser": "^1.9.0",
     "express": "^4.9.8",
     "mongo": "^0.1.0",
     "mongoose": "^3.8.17"
